--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate $",
     "start": "node index.js",
+    "test": "mocha ./src/**/*$NAME*.test.js --exit",
     "debug": "nodemon ./src/index.js"
   },
   "keywords": [],
@@ -22,11 +22,16 @@
     "sequelize": "^6.15.1"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "mocha": "^9.2.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "sequelize-test-helpers": "^1.4.2",
+    "sinon": "^13.0.1"
   }
 }
