--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,21 @@
   "name": "ecoveco-data-manager",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate $",
-    "start": "node index.js",
-    "test": "mocha ./src/**/*$NAME*.test.js --exit",
-    "debug": "nodemon ./src/index.js"
+    "prestart": "npx sequelize db:create && npx sequelize db:migrate",
+    "start": "node src/server.js",
+    "predev": "npx sequelize db:create && npx sequelize db:migrate",
+    "dev": "nodemon src/server.js --ignore __tests__",
+    "pretest": "NODE_ENV=test sequelize db:migrate",
+    "test": "NODE_ENV=test jest",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "joi": "^17.6.0",
@@ -22,16 +25,15 @@
     "sequelize": "^6.15.1"
   },
   "devDependencies": {
-    "chai": "^4.3.6",
-    "chai-http": "^4.3.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "mocha": "^9.2.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "sequelize-cli": "^6.4.1",
-    "sequelize-test-helpers": "^1.4.2",
-    "sinon": "^13.0.1"
+    "sinon": "^13.0.1",
+    "sqlite3": "^5.0.2",
+    "supertest": "^6.2.2"
   }
 }
